# vigra

./: BUILD_ISSUES_ANALYSIS.md  BUILD_SYSTEM_README.md  BUILD_SYSTEM_TEST_REPORT.md  INSTALLATION.md  MIGRATION_GUIDE.md  README.md  azure-pipelines.yml  pyproject.toml  setup.py  test_build_config.py
ci/: build_unix.sh  build_windows.bat
docsrc/: credits_changelog.dxx
include/vigra/: accumulator.hxx  basicimage.hxx  blockwise_labeling.hxx  gaborfilter.hxx  imagecontainer.hxx  memory.hxx  random.hxx  random_access_set.hxx  splineimageview.hxx
include/vigra/random_forest/: rf_earlystopping.hxx
src/impex/: exr.cxx
vigra/: __init__.py  _version.py
